Fixed horizontal aligning and footer overlapping content

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@ body {
 .main-content {
   min-height: 100vh;
   overflow: hidden;
-  padding-bottom: 50px;
+  padding-bottom: 80px;
 }
 
 #home-content {
@@ -65,6 +65,10 @@ h2 {
   text-align: center;
 }
 
+#answers {
+  text-align: center;
+}
+
 .answers {
   display: none;
   flex-wrap: wrap;
@@ -74,8 +78,9 @@ h2 {
 }
 
 .answer {
-  display: inline;
+  display: inline-block;
   margin: 0 20px 20px 20px;
+  min-width: 100px;
 }
 
 .btn-answer {
@@ -126,10 +131,11 @@ h2 {
 
 .btn-skip {
   font-size: 14px;
-  margin: 16px 16px 16px 10px;
+  /*margin: 16px 16px 16px 10px;*/
   min-width: 100px;
   padding: 0;
   text-decoration: none;
+  height: 100%;
 }
 
 #is-offensive-label {
@@ -137,6 +143,10 @@ h2 {
   /*margin: 0 20px 50px 20px;*/
   margin-top: 16px;
   text-align: center;
+}
+
+#is-offensive-li {
+  width: 100px;
 }
 
 #is-offensive {
